--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,8 @@
-.App {
-  text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-}
-
-.App-header {
-  background-color: white;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: black;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 /* landing page */
-
 .container {
   position: relative;
   color: black;
 }
-
 /* Bottom left text */
 .bottom-left {
   position: absolute;
@@ -116,7 +83,7 @@ br {
   background-color: #427c42 !important;
 }
 
-hr {
+hr.one {
   border: none;
   height: 20px;
   width: 90%;
@@ -125,4 +92,10 @@ hr {
   border-bottom: 1px solid #1f1209;
   box-shadow: 0 20px 20px -20px #333;
   margin: -50px auto 10px;
+}
+
+/* select meal page */
+hr.two {
+  width: 30%;
+  background-color: black;
 }
