--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,11 @@
   right: 16px;
 }
 
+.top-center {
+  position: absolute;
+  top: 15%;
+  left: 40%;
+}
 /* Bottom right text */
 .bottom-right {
   position: absolute;
@@ -107,4 +112,20 @@ hr.two {
 
 hr.three {
   width: 40%;
+}
+
+.header {
+  height: 600px;
+  width: 100vw;
+  background: black;
+  overflow: hidden;
+}
+
+.black {
+  outline: 100px solid rgba(0, 0, 0, 0.5) !important;
+  outline-offset: -100px;
+  overflow: hidden;
+  position: relative;
+  height: 187px;
+  width: 276px;
 }
