our story page done

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -119,6 +119,11 @@ hr.three {
   background-color: #dbdbdbc0;
 }
 
+hr.four {
+  width: 40%;
+  background-color: #dbdbdbc0;
+}
+
 .header {
   height: 600px;
   width: 100vw;
