border added for subscription page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -225,3 +225,9 @@ hr.four {
 .font4 {
   font-family: "Heebo", sans-serif;
 }
+
+.borderr {
+  size: 10px;
+  border-style: solid;
+  border-width: thick;
+}
