fixed font and images and small changed on frontend

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -226,8 +226,11 @@ hr.four {
   font-family: "Heebo", sans-serif;
 }
 
+.font5 {
+  font-family: "Montserrat", sans-serif;
+}
+
 .borderr {
-  size: 10px;
   border-style: solid;
   border-width: thick;
 }
