temporary fix for footer
resolved the issue wih footer on mobile devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -247,3 +247,11 @@ hr.four {
   font-size: 20px;
   text-shadow: rgba(0, 0, 0, 0.4) 0px 4px 5px;
 }
+
+/* Footer */
+.footer {
+  padding-top: 20%;
+  margin-top: -20%;
+  height: 20%;
+  clear: both;
+}
