Input fields now data checked

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,6 +61,10 @@
   transform: translate(-50%, -50%);
 }
 
+.override-form-control {
+  color: #181818;
+}
+
 br {
   display: block;
   margin: 100px 100px;
