Interactive rebase to squash Bing API key
Fixed AWS DEV_URL merge conflict

Squashed commits to remove API key (don't push keys to GitHub please)

Added API key to Coordinates class
Revised Coordinates class to return Nones for completely invalid addresses
Started login attempt API
Fix mealplan and paymentplan image dark overlay and aspect ratio
UI can now grab browser type + user IP address
Incorporated Bing API to Checkout
Added login id and session id to login on UI/API
Removed Sign In text from header
make changed button creates model created
finished make changes modal with dynamic data
updated personal information
deleted information that customers can not make changes
added dynamic data to make changed model
added delect account button, changed header and account button

edit my subscription to be full detail with price

redesigned select meal modal

meal selection reformat update

fixed more ignored merge conflicts from feature/meal-selection-redesign

Removed deprecated Checkout code

npm install

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,6 +53,14 @@
   right: 16px;
 }
 
+.bottom-right-meal-selection {
+  position: absolute;
+  bottom: 30px;
+  right: 0.1px;
+  left: 0.1px;
+  float: right;
+}
+
 /* Centered text */
 .centered {
   position: absolute;
@@ -161,18 +169,29 @@ hr.four {
 }
 
 .black {
-  outline: 100px solid rgba(0, 0, 0, 0.5) !important;
+  /* outline: 100px solid rgba(0, 0, 0, 0.5) !important;
   outline-offset: -100px;
   overflow: hidden;
   position: relative;
-  height: 187px;
+  /*height: 187px;
+  width: 276px; */
+  object-fit: cover;
+  opacity: 50%;
   width: 276px;
+  height:187px;
 }
+
+.overlay {
+  background: black;
+}
+
 .blackM {
-  outline: 100px solid rgba(0, 0, 0, 0.5) !important;
+  /* outline: 100px solid rgba(0, 0, 0, 0.5) !important;
   outline-offset: -100px;
   overflow: hidden;
-  position: relative;
+  position: relative; */
+  object-fit: cover;
+  opacity: 50%;
   height: 187px;
   width: 252px;
 }
@@ -216,6 +235,16 @@ hr.four {
 .h6 {
   font-size: 10em;
 }
+.container-select-meal {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.scrollMenu {
+  overflow: auto;
+  height: 550px;
+}
 
 /* font */
 
@@ -237,6 +266,11 @@ hr.four {
 
 .font5 {
   font-family: "Montserrat", sans-serif;
+}
+
+.scrollMenu-profile {
+  overflow: auto;
+  height: 450px;
 }
 
 /* subscription page */
