--- a/client/src/App.css
+++ b/client/src/App.css
@@ -152,18 +152,29 @@ hr.four {
 }
 
 .black {
-  outline: 100px solid rgba(0, 0, 0, 0.5) !important;
+  /* outline: 100px solid rgba(0, 0, 0, 0.5) !important;
   outline-offset: -100px;
   overflow: hidden;
   position: relative;
-  height: 187px;
+  /*height: 187px;
+  width: 276px; */
+  object-fit: cover;
+  opacity: 50%;
   width: 276px;
+  height:187px;
 }
+
+.overlay {
+  background: black;
+}
+
 .blackM {
-  outline: 100px solid rgba(0, 0, 0, 0.5) !important;
+  /* outline: 100px solid rgba(0, 0, 0, 0.5) !important;
   outline-offset: -100px;
   overflow: hidden;
-  position: relative;
+  position: relative; */
+  object-fit: cover;
+  opacity: 50%;
   height: 187px;
   width: 252px;
 }
