Successed to make card working on three browser.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,16 +48,11 @@
 }
 
 .selectmeal-center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 30px;
-  width: 100%;
   font-size: 30px;
   text-shadow: 2px 2px 4px #ffefb0;
-  line-height: 35px;
+  line-height: 30px;
   color: white;
+  vertical-align: middle;
 }
 
 /* Bottom right text */
@@ -275,6 +270,9 @@ hr.four {
   text-shadow: rgba(0, 0, 0, 0.4) 0px 4px 5px;
 }
 
+.rcorner_color {
+  background-color: #427c42;
+}
 /* #meal-sub-parent {
   display: table;
 }
@@ -282,3 +280,8 @@ hr.four {
   display: table-cell;
   vertical-align: middle;
 } */
+.border_card_subcribe {
+  padding: 0px !important;
+  border: 1px solid #b4b4b4;
+  box-shadow: 10px 0px 32px 4px rgba(0, 0, 0, 0.3);
+}
