--- a/client/src/App.css
+++ b/client/src/App.css
@@ -263,7 +263,7 @@ hr.four {
   /* padding: 15px;
   margin: 2px;
   width: 88%; */
-  margin-bottom: 0px;
+  margin-bottom: 3px;
   height: 7%;
   color: white;
   font-size: 20px;
@@ -282,6 +282,10 @@ hr.four {
 } */
 .border_card_subcribe {
   padding: 0px !important;
-  border: 1px solid #b4b4b4;
+  /* border: 1px solid #b4b4b4; */
   box-shadow: 10px 0px 32px 4px rgba(0, 0, 0, 0.3);
+}
+
+.card_color {
+  color: green;
 }
