--- a/client/src/App.css
+++ b/client/src/App.css
@@ -149,7 +149,7 @@ hr.one-half {
   width: 90%;
   height: 50px;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   border-top: 0 solid #1f1209;
   box-shadow: 0 -20px 20px -20px #333;
   margin-left: 50px;
@@ -337,5 +337,26 @@ hr.four {
   margin-bottom: 50px;
 }
 .feedback_marginTop {
+  margin-top: 150px;
+}
+.home_title {
+  font-size: 40px;
+  line-height: 55px;
+  text-shadow: 2px 2px 10px white;
+  font-weight: normal;
+}
+.home_subtitle {
+  margin-bottom: 200px;
+}
+.home_subtitle p {
+  font-size: 21px;
+  text-shadow: 2px 2px 10px white;
+  line-height: 35px;
+}
+.start_button {
+  margin-top: 10px;
+  color: white;
+}
+.container_space {
   margin-top: 150px;
 }
