put the footer of cards into border

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -366,3 +366,6 @@ hr.four {
   border: 1px solid rgb(68, 68, 68);
   border-radius: 0px;
 }
+.background_black {
+  background-color: #181818 !important;
+}
