--- a/client/src/App.css
+++ b/client/src/App.css
@@ -83,6 +83,11 @@
   left: 0.1px;
   float: right;
 }
+.top-right-meal-selection {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+}
 
 /* Centered text */
 .centered {
