--- a/client/src/App.css
+++ b/client/src/App.css
@@ -85,8 +85,10 @@
 }
 .top-right-meal-selection {
   position: absolute;
-  top: 8px;
-  right: 8px;
+  top: 0.1px;
+  right: 0.1px;
+  left: 0.1px;
+  float: right;
 }
 
 /* Centered text */
